<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_green"
    tools:context="com.si.seedshare.register.RegisterStepTwoActivity">

    <Button
        android:id="@+id/bt_next"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_background_green_light"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bt_next"
        android:textColor="#FFFFFFFF"
        android:textSize="22sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_birthday" />

    <TextView
        android:id="@+id/tv_question_two"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_birthday_question_register_two"
        android:textAlignment="center"
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <TextView
        android:id="@+id/tv_email_request"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="90dp"
        android:text="@string/tv_name_question_register_two"
        android:textAlignment="center"
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/et_hint_name"
        android:inputType="textPersonName"
        android:textColor="@color/basicText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_request" />

    <EditText
        android:id="@+id/et_birthday"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/et_hint_birthday"
        android:inputType="date"
        android:textColor="@color/basicText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_two"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
