<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_green"
    tools:context="com.si.seedshare.register.RegisterStepThreeActivity">

    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/etHintPassword"
        android:inputType="textPassword"
        android:textColor="@color/basicText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_confirm" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/etHintPassword"
        android:inputType="textPassword"
        android:textColor="@color/basicText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_alert" />

    <TextView
        android:id="@+id/tv_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/passwordConfirm"
        android:textAlignment="center"
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_password_request"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/passwordRequest"
        android:textAlignment="center"
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/etHintEmail"
        android:inputType="textPersonName"
        android:textColor="@color/basicText"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_alert" />

    <TextView
        android:id="@+id/tv_email_request"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/emailRequest"
        android:textAlignment="center"
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_of_birth_title" />

    <TextView
        android:id="@+id/tv_date_of_birth_title"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="26dp"
        android:text="@string/dateOfBirth"
        android:textAlignment="textStart"
        android:textColor="@color/basicText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_dateOfBirth_title" />

    <TextView
        android:id="@+id/tv_dateOfBirth_title"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textColor="@color/basicText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_of_birth"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="..."
        android:textAlignment="textStart"
        android:textColor="@color/basicText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tv_date_of_birth_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_date_of_birth_title"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        android:text="..."
        android:textAlignment="textStart"
        android:textColor="@color/basicText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tv_dateOfBirth_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_dateOfBirth_title" />

    <Button
        android:id="@+id/bt_next"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/gradient_background_green_light"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bt_next"
        android:textColor="#FFFFFFFF"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_confirm"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tv_password_alert"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/passwordAlert"
        android:textAlignment="textStart"
        android:textColor="@color/textHint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_request"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tv_email_alert"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/emailAlert"
        android:textAlignment="textStart"
        android:textColor="@color/textHint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_request"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
