<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_green"
    android:layout_alignParentBottom="true"
    tools:context="com.si.seedshare.LoginActivity">

    <Button
        android:id="@+id/bt_register"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@drawable/gradient_background_green_light"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bt_register"
        android:textColor="#FFFFFFFF"
        android:textSize="22sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="40dp"
        android:background="@color/loginButton"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bt_login"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#A8A8A8"
        android:visibility="visible"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_register_question"
        app:layout_constraintVertical_bias="0.232" />

    <TextView
        android:id="@+id/tv_register_question"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/tv_register_question"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_register" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/textHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="63dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_appname"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:textColorHint="@color/textHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="37dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorApplicationName"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.454" />

</android.support.constraint.ConstraintLayout>
