<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_green"
    tools:context="com.si.seedshare.register.RegisterConfirm">

    <Button
        android:id="@+id/bt_reset"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/gradient_background_green_light"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btReset"
        android:textColor="#FFFFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_of_birth" />

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/gradient_background_green_light"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btConfirm"
        android:textColor="#FFFFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_of_birth" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="..."
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_title"
        android:layout_marginStart="44dp" />

    <TextView
        android:id="@+id/tv_date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        android:text="..."
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_of_birth_title"
        android:layout_marginStart="44dp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="..."
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_title"
        android:layout_marginStart="44dp" />

    <TextView
        android:id="@+id/tv_date_of_birth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateOfBirth"
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:layout_marginStart="44dp" />

    <TextView
        android:id="@+id/tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="44dp" />

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="31dp"
        android:text="@string/name"
        android:textColor="@color/basicText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="44dp" />

</android.support.constraint.ConstraintLayout>
